[package]
name = "overlay"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
libfuse-fs = { path = "../../" }
libc = "0.2.171"
log = "0.4.26"
env_logger = "0.11.7"
tokio = { version = "1.44.0", features = ["full"] }
signal-hook = "0.3"
rfuse3 = { version = "0.0.3", features = ["tokio-runtime", "unprivileged"] }